--- a/style.css
+++ b/style.css
@@ -9,13 +9,18 @@ body {
 .item-container {
     width: 35rem;
     height: 50rem;
-    display: block;
+    display: none;
     padding: 1rem;
     border: 2px solid black;
     margin: 5rem;
     overflow: hidden;
     position: relative;
 }
+.item-container:hover {
+    opacity: 70%;
+
+}
+
 h2 {
     font-family: rockwell;
     font-size: 5.7rem;
@@ -56,16 +61,22 @@ p {
 
 
 .container {
+    width: 100%;
+    height: 100%;
     display: flex;
-    background-color: white;
-    margin-top: 10rem;
-    padding: 0;
+    background-color: transparent;
+    margin-top: 0rem;
+    padding-top: 5rem;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
 .cover {
-    background-color: lightgreen;
+    background-color: pink;
+    width: 100%;
+    height: auto;
+    position: relative;
+    margin-top: -5rem;
 }
 
 
@@ -73,6 +84,7 @@ p {
 
 .h1 {
     margin-left: auto;
+
 }
 .logo {
     width: 4rem;
@@ -80,6 +92,7 @@ p {
     padding: .5rem;
     align-self: flex-end;
     margin-right: 4rem;
+    cursor: pointer;
 }
 .header {
     display: flex;
@@ -101,18 +114,17 @@ p {
     z-index: 1;
     top: 0;
     right: 0;
-    background-color: black;
+    background-color: white;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-    
 }
 .sidebar a {
     text-decoration: none;
     font-family: montserrat,sans-serif;
     font-weight: 800;
     font-style: normal;
-    color: white;
+    color: black;
     font-size: 10rem;
     display: flex;
     transition: 0.3s;
@@ -139,26 +151,48 @@ p {
     background-color: transparent;
     outline: none;
     align-self: end;
+    cursor: pointer;
 }
 .openbtn:hover {
     opacity: 65%;
+    cursor: pointer;
 }
 #main {
     transition: margin-right .5s;
     padding: 16px;
 }
 
+.home {
+    text-decoration: none;
+    font-family: montserrat,sans-serif;
+    font-weight: 800;
+    font-style: normal;
+    color: black;
+    font-size: 10rem;
+    margin-left: 6rem;
+    position: absolute;
+    margin-top: 10rem;
+    cursor: pointer;
+}
+.home:hover {
+    opacity: 70%;
+    font-family: montserrat,sans-serif;
+    font-weight: 800;
+    font-style: italic;
+    font-size: 10rem;
+    cursor: pointer;
+}
 .furn {
     text-decoration: none;
     font-family: montserrat,sans-serif;
     font-weight: 800;
     font-style: normal;
-    color: white;
+    color: black;
     font-size: 10rem;
-    margin-left: 10rem;
+    margin-left: 6rem;
     position: absolute;
-    margin-top: 10rem;
-    
+    margin-top: 30rem;
+    cursor: pointer;
 }
 .furn:hover {
     opacity: 70%;
@@ -166,36 +200,39 @@ p {
     font-weight: 800;
     font-style: italic;
     font-size: 10rem;
+    cursor: pointer;
 }
 .kit {
     text-decoration: none;
     font-family: montserrat,sans-serif;
     font-weight: 800;
     font-style: normal;
-    color: white;
+    color: black;
     font-size: 10rem;
-    margin-left: 10rem;
+    margin-left: 6rem;
     position: absolute;
-    margin-top: 30rem;
-
+    margin-top: 45rem;
+    cursor: pointer;
 }
 .kit:hover {
-    opacity: 70%;
+    opacity: 70%; 
     font-family: montserrat,sans-serif;
     font-weight: 800;
     font-style: italic;
     font-size: 10rem;
+    cursor: pointer;
 }
 .misc {
     text-decoration: none;
     font-family: montserrat,sans-serif;
     font-weight: 800;
     font-style: normal;
-    color: white;
+    color: black;
     font-size: 10rem;
-    margin-left: 10rem;
+    margin-left: 6rem;
     position: absolute;
-    margin-top: 50rem;
+    margin-top: 60rem;
+    cursor: pointer;
 }
 .misc:hover {
     opacity: 70%;
@@ -203,5 +240,16 @@ p {
     font-weight: 800;
     font-style: italic;
     font-size: 10rem;
+    cursor: pointer;
+}
+.decor {
+    width: 10rem;
+    height: 10rem;
+    margin-top: 77rem;
+    margin-left: 25rem;
+}
+.image {
+    width: 5rem;
+    height: 9rem;
 }
 
