--- a/style.css
+++ b/style.css
@@ -18,9 +18,7 @@ body {
 }
 .item-container:hover {
     opacity: 70%;
-
 }
-
 h2 {
     font-family: rockwell;
     font-size: 5.7rem;
@@ -60,6 +58,7 @@ p {
 }
 
 
+
 .container {
     width: 100%;
     height: 100%;
@@ -72,14 +71,18 @@ p {
     justify-content: space-evenly;
 }
 .cover {
-    background-color: pink;
+    background-color: transparent;
     width: 100%;
     height: auto;
     position: relative;
     margin-top: -5rem;
+    animation: fadein 2s forwards;
 }
-
-
+@keyframes fadein {
+    to {
+        background-color: black;
+    }
+}
 
 
 .h1 {
