--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 }
 body {
     overflow-x: hidden;
+    display: flex;
+    flex-flow: row wrap;
 }
 
 .item-container {
@@ -93,8 +95,6 @@ p {
     width: 4rem;
     height: 6rem;
     padding: .5rem;
-    align-self: flex-end;
-    margin-right: 4rem;
     cursor: pointer;
 }
 .header {
@@ -103,10 +103,11 @@ p {
     font-size: 1.5rem;
     position: sticky;
     background-color: white;
-    width: 100%;
     top: 0;
-    justify-content: space-between;
     padding-top: 2rem;
+    flex-flow: row wrap;
+    width: 100%;
+    justify-content: space-between;
 }
 
 
@@ -256,3 +257,123 @@ p {
     height: 9rem;
 }
 
+
+
+#slideshow-cover {
+    background-color: black;
+    margin-top: -5rem;
+    width:33.3%;
+}
+#slideshow-cover2 {
+    background-color: black;
+    margin-top: -5rem;
+    width:33.3%;
+}
+#slideshow-cover3 {
+    background-color: black;
+    margin-top: -5rem;
+    width:33.3%;
+}
+
+.slide {
+    
+    width: 50rem;
+    height: 55rem;
+}
+.jpg {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    margin-left: 10rem;
+}
+
+[data-component="slideshow"] .slide {
+    display: none;
+}
+
+[data-component="slideshow"] .slide.active {
+    display: flex;
+}
+[data-component="slideshow2"] .slide {
+    display: none;
+}
+
+[data-component="slideshow2"] .slide.active {
+    display: flex;
+}
+[data-component="slideshow3"] .slide {
+    display: none;
+}
+
+[data-component="slideshow3"] .slide.active {
+    display: flex;
+}
+.caption {
+    color: black;
+    font-family: montserrat,sans-serif;
+    font-weight: 800;
+    font-size: 10rem;
+    text-align: center;
+    margin-bottom: 2rem;
+    margin-left: 2rem;
+}
+.caption span {
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    animation: topToBottom 5s infinite;
+}
+.caption span:nth-child(2) {
+    animation-delay: 1s;
+}
+.caption span:nth-child(3) {
+    animation-delay: 2s;
+}
+.caption span:nth-child(4){
+    -ms-animation-delay: 3s;
+    -webkit-animation-delay: 3s;
+    animation-delay: 3s;
+  }
+  
+.caption span:nth-child(5){
+    -ms-animation-delay: 4s;
+    -webkit-animation-delay: 4s;
+    animation-delay: 4s;
+  }
+@-webkit-keyframes topToBottom {
+    0%, 20% {opacity: 1} 
+    20.01%, 100% {opacity: 0} 
+  }
+
+.sub-caption {
+    color: black;
+    font-family: montserrat,sans-serif;
+    font-weight: 800;
+    font-size: 6.5rem;
+    text-align: center;
+    margin-top: 2rem;
+    margin-left: 35rem;
+}
+.sub-caption span {
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    animation: topToBottom 5s infinite;
+}
+.sub-caption span:nth-child(2) {
+    animation-delay: 1s;
+}
+.sub-caption span:nth-child(3) {
+    animation-delay: 2s;
+}
+.sub-caption span:nth-child(4){
+    -ms-animation-delay: 3s;
+    -webkit-animation-delay: 3s;
+    animation-delay: 3s;
+  }
+  
+.sub-caption span:nth-child(5){
+    -ms-animation-delay: 4s;
+    -webkit-animation-delay: 4s;
+    animation-delay: 4s;
+  }
